<resources>
    <string name="app_name" translatable="false">Video Chat</string>

    <string name="i_forgot_pass_txt">Forgot password?</string>
    <string name="registration">Registration</string>
    <string name="main">Main</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login_with_google">Login with google</string>
    <string name="or">or</string>
    <string name="repeat_password">Repeat password</string>
    <string name="password">Password</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="phone_number">Phone number</string>
    <string name="last_name">Last name</string>
    <string name="name">Name</string>
    <string name="de">DE</string>
    <string name="en">EN</string>
    <string name="email_address">Email address</string>

    <string name="login">Login</string>
    <string name="we_have_sent_you_an_email">We have sent you an email \nto your address to verify it. \nPlease follow the link in the email</string>
    <string name="events">Events</string>
    <string name="property">Property</string>
    <string name="listings">Listings</string>
    <string name="smart_devices">Smart devices</string>
    <string name="today_events">Today events</string>
    <string name="tomorrow_events">Tomorrow events</string>
    <string name="not">No</string>
    <string name="female">Female </string>
    <string name="all">  All </string>
    <string name="male">Male </string>

</resources>